# HelloWorldTerminalCMake

./: .gitignore  CMakeLists.txt  Create HelloWorld Using Terminal.txt  README.md  cmake.sh  makeCmake.sh  makeCmakeLibary.sh
src/: main.cpp  printer.h
src/JamesStuffLib/: CMakeLists.txt  printer.cpp  printer.h
